Dark mode bug

--- a/styles/modules/ui/vectorbox.module.css
+++ b/styles/modules/ui/vectorbox.module.css
@@ -54,7 +54,7 @@
 }
 
 .btn:hover {
-  border: 1px solid #626262;
+  border: 1px solid #6d6d6d;
 }
 
 #inputcontainer {
